--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pigw",
   "private": true,
   "dependencies": {
-    "@hotwired/turbo-rails": "^7.0.0-beta.5",
+    "@hotwired/turbo-rails": "^7.0.0-beta.7",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -11,6 +11,7 @@
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "simple-keyboard": "^3.1.42",
     "stimulus": "^2.0.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
